--- a/prj/javaee8-hibernate/src/resources/oracle.jdbc.properties
+++ b/prj/javaee8-hibernate/src/resources/oracle.jdbc.properties
@@ -6,7 +6,7 @@ jdbc.driverClassName=oracle.jdbc.OracleDriver
 jdbc.password=OYJR_RZHX
 jdbc.url=jdbc:oracle:thin:@//192.168.0.105:1521/orcl
 jdbc.username=OYJR_RZHX
-#jdbc.password=tongange
+#jdbc.password=tongange_orcl_xyd_21094
 #jdbc.url=jdbc:oracle:thin:@//localhost:1521/orcl
-#jdbc.username=c##tongange
+#jdbc.username=system
 hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
