--- a/prj/javaee8-hibernate/src/resources/log4j.properties
+++ b/prj/javaee8-hibernate/src/resources/log4j.properties
@@ -9,7 +9,7 @@
 #log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 #log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
 #log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-#log4j.appender.logfile.File=javaee8log/5/mysqlSaveTable.log
+#log4j.appender.logfile.File=javaee8log/20161021/SaveCompanyData.save1.log
 #log4j.appender.logfile.MaxFileSize=1048576MB
 #log4j.appender.A2.Append=true
 #log4j.appender.logfile.MaxBackupIndex=4
