--- a/prj/javaee8-hibernate/src/resources/oracle.jdbc.properties
+++ b/prj/javaee8-hibernate/src/resources/oracle.jdbc.properties
@@ -4,6 +4,7 @@ hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
 ##
 ################mysql################
+#jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.password=tongange
 #jdbc.username=tongange
 #jdbc.url=jdbc:mysql://localhost:3306/javaee8
